overflow fix

--- a/frontend/css/style.less
+++ b/frontend/css/style.less
@@ -117,7 +117,7 @@ strong {
 
         &.is-active {
             cursor: auto;
-            overflow: scroll;
+            overflow-y: scroll;
 
             &:hover {
                 transform: translateX(0)
